# UrbiLoquendoTTS

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ULoquendoTTS.cpp  ULoquendoTTS.h
